--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
   <link rel="icon" type="image/png" sizes="96x96" href="./src/assets/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="./src/assets/favicon/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
 
-  <title>ASC | Full Stack Developer</title>
+  <title>.</title>
 </head>
 
 <body>
