--- a/index.html
+++ b/index.html
@@ -22,7 +22,24 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
 
-  <title>.</title>
+  <title>ASC | Full Stack Developer</title>
+  <meta property="og:type" content="website" />
+      <meta property="og:url" content="https://ascinfo.netlify.app/" />
+      <meta property="og:title" content="ASC | Full Stack Developer" />
+      <meta
+        property="og:description"
+        content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software."
+      />
+      <meta property="og:image" content="../assets/og_img.jpeg" />
+
+      <meta property="twitter:card" content="summary_large_image" />
+      <meta property="twitter:url" content="https://ascinfo.netlify.app/" />
+      <meta property="twitter:title" content="ASC | Full Stack Developer" />
+      <meta
+        property="twitter:description"
+        content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software."
+      />
+      <meta property="twitter:image" content="../assets/og_img.jpeg" />
 </head>
 
 <body>
