--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         property="og:description"
         content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software."
       />
-      <meta property="og:image" content="https://ascinfo.netlify.app/assets/og_img.jpeg" />
+      <meta property="og:image" content="https://wallpapercave.com/wp/wp8903914.jpg" />
 
       <meta property="twitter:card" content="summary_large_image" />
       <meta property="twitter:url" content="https://ascinfo.netlify.app/" />
@@ -39,7 +39,7 @@
         property="twitter:description"
         content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software."
       />
-      <meta property="twitter:image" content="https://ascinfo.netlify.app/assets/og_img.jpeg" />
+      <meta property="twitter:image" content="https://wallpapercave.com/wp/wp8903914.jpg" />
 </head>
 
 <body>
