--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link rel="preload"
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@300&display=swap" as="style"
+    onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@300&display=swap">
+  </noscript>
+
   <link rel="apple-touch-icon" sizes="57x57" href="./src/assets/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./src/assets/favicon/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="./src/assets/favicon/apple-icon-72x72.png">
@@ -16,7 +23,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="./src/assets/favicon/apple-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="./src/assets/favicon/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="./src/assets/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./src/assets/favicon/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="./src/assets/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon/favicon-16x16.png">
@@ -24,22 +31,18 @@
 
   <title>ASC | Full Stack Developer</title>
   <meta property="og:type" content="website" />
-      <meta property="og:url" content="https://ascinfo.netlify.app/" />
-      <meta property="og:title" content="ASC | Full Stack Developer" />
-      <meta
-        property="og:description"
-        content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software."
-      />
-      <meta property="og:image" content="https://wallpapercave.com/wp/wp8903914.jpg" />
+  <meta property="og:url" content="https://ascinfo.netlify.app/" />
+  <meta property="og:title" content="ASC | Full Stack Developer" />
+  <meta property="og:description"
+    content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software." />
+  <meta property="og:image" content="https://wallpapercave.com/wp/wp8903914.jpg" />
 
-      <meta property="twitter:card" content="summary_large_image" />
-      <meta property="twitter:url" content="https://ascinfo.netlify.app/" />
-      <meta property="twitter:title" content="ASC | Full Stack Developer" />
-      <meta
-        property="twitter:description"
-        content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software."
-      />
-      <meta property="twitter:image" content="https://wallpapercave.com/wp/wp8903914.jpg" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://ascinfo.netlify.app/" />
+  <meta property="twitter:title" content="ASC | Full Stack Developer" />
+  <meta property="twitter:description"
+    content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software." />
+  <meta property="twitter:image" content="https://wallpapercave.com/wp/wp8903914.jpg" />
 </head>
 
 <body>
