--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
   <meta property="twitter:description"
     content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software." />
   <meta property="twitter:image" content="https://wallpapercave.com/wp/wp8903914.jpg" />
+
+  <meta name="google-site-verification" content="vnAt5KM39Ug30xMk97y7bnJdiHKcWdALCCdqQ-7a6jA" />
 </head>
 
 <body>
