--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="./src/assets/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
 
   <title>ASC | Full Stack Developer</title>
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://ascinfo.netlify.app/" />
+  <meta property="og:url" content="https://ascinfo.live/" />
   <meta property="og:title" content="ASC | Full Stack Developer" />
   <meta property="og:description"
     content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software." />
   <meta property="og:image" content="https://wallpapercave.com/wp/wp8903914.jpg" />
 
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://ascinfo.netlify.app/" />
+  <meta property="twitter:url" content="https://ascinfo.live/" />
   <meta property="twitter:title" content="ASC | Full Stack Developer" />
   <meta property="twitter:description"
     content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software." />
