--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
   <link rel="icon" type="image/png" sizes="96x96" href="./src/assets/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon/favicon-16x16.png">
 
-  <title>ASC | Full Stack Developer</title>
+  <title>Aitor Santana Cabrera - Full Stack Developer</title>
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ascinfo.live/" />
-  <meta property="og:title" content="ASC | Full Stack Developer" />
+  <meta property="og:title" content="Aitor Santana Cabrera - Full Stack Developer" />
   <meta property="og:description"
     content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software." />
   <meta property="og:image" content="https://wallpapercave.com/wp/wp8903914.jpg" />
 
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://ascinfo.live/" />
-  <meta property="twitter:title" content="ASC | Full Stack Developer" />
+  <meta property="twitter:title" content="Aitor Santana Cabrera - Full Stack Developer" />
   <meta property="twitter:description"
     content="Soy Desarrollador Web Full-Stack, con el stack MERN aunque también tengo conocimientos de Angular, al que le gusta actualizarse constantemente y desarrollar mi mayor pasión, programar webapps o cualquier tipo de software." />
   <meta property="twitter:image" content="https://wallpapercave.com/wp/wp8903914.jpg" />
-  <meta name="keywords" content="ascinfo, ASCinfo, Aitor Santana Cabrera"/>
+  <meta name="keywords" content="ascinfo, Aitor Santana Cabrerainfo, Aitor Santana Cabrera"/>
 </head>
 
 <body>
